2006-07-28  Rodney Dawes  <dobey@novell.com>

	* 16x16/actions/Makefile.am: Add missing tab-new to icon_DATA

	Fixes #348981

2006-07-25  Jakub Steiner <jimmac@ximian.com>

	* view-fullscreen:
	* view-restore: at all sizes

2006-07-24  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.ac: Update version to 2.15.90 for release
	Update requirement on icon-naming-utils to 0.7.4

2006-07-24  Rodney Dawes  <dobey@novell.com>

	* */actions/Makefile.am:
	* */actions/view-fullscreen.png:
	* */actions/view-restore.png:
	Move the old fullscreen action icons out of stock and to new names

	* */stock/generic/Makefile.am:
	* */stock/generic/stock_fullscreen.png:
	* */stock/generic/stock_leave-fullscreen.png:
	Remove these icons replaced by the new versions above
	
2006-07-24  Rodney Dawes  <dobey@novell.com>

	* */stock/generic/Makefile.am:
	* */stock/generic/stock_close.png:
	Removed the stock_close icon that is obsoleted by window-close

	Fixes #348509

2006-07-24  Rodney Dawes  <dobey@novell.com>

	* */stock/io/Makefile.am:
	* */stock/io/stock_open.png:
	Removed the stock_open icon that is obsoleted by folder-open

	Fixes #348401

2006-07-24  Jakub Steiner <jimmac@ximian.com>

	* tab-new, window-new, folder-new: updated the 'new' emblem

2006-07-24  Jakub Steiner <jimmac@ximian.com>

	* document-new*: fixes bug #348433. Includes a more visible emblem
		for new-*
	
2006-07-23  Rodney Dawes  <dobey@novell.com>

	* */apps/Makefile.am:
	* */apps/utilities-terminal.*:
	Add new terminal icon from Andreas Nilsson

	* 32x32/apps/preferences-desktop-screensaver.*:
	* 32x32/apps/system-file-manager.*:
	Add 32x32 versions of these from Andreas Nilsson

	* 48x48/apps/Makefile.am:
	* 48x48/apps/gnome-terminal.*:
	Remove the old terminal icon

2006-07-23  Rodney Dawes  <dobey@novell.com>

	* 22x22/apps/preferences-desktop-screensaver.*:
	* 24x24/apps/preferences-desktop-screensaver.*:
	Remove the background from this image

	* scalable/devices/Makefile.am: Add missing computer.svg
