@@ -1,3 +1,9 @@
+2006-07-31  Rodney Dawes  <dobey@novell.com>
+
+	* index.theme.in: Add missing 8x8, 22x22, and 32x32 directories
+
+	Fixes #349353
+
 2006-07-28  Rodney Dawes  <dobey@novell.com>
 
 	* 16x16/actions/Makefile.am: Add missing tab-new to icon_DATA
